# vuer

./: .gitignore  AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: audits.md  installation.md  usage.md
src/: config.rs  lib.rs  main.rs  rule_id.rs  scanner.rs  severity.rs
src/parser/: mod.rs  script.rs
src/parser/template/: ast.rs  mod.rs  parser.rs  tests.rs
src/report/: sarif.rs
src/rules/: mod.rs  no_dangerous_url.rs  no_document_write.rs  no_dynamic_bind.rs  no_eval.rs  no_fetch_without_timeout.rs  no_inline_styles.rs  no_inner_html.rs  no_open_redirect.rs  no_postmessage_wildcard.rs  no_unsafe_iframe.rs  no_unsafe_localstorage.rs  no_v_html.rs  no_watch_with_callback.rs  no_window_open_blank_noopener.rs  v_for_missing_key.rs
src/visitor/: mod.rs
tests/: integration.rs
tests/fixtures/: vulnerable_full.vue
tests/integration/: audit.rs  snapshots.rs
