[package]
name = "vuer"
version = "0.1.0"
edition = "2024"
description = "A high-performance Vue.js SFC scanner with clear, actionable diagnostics"
license = "MIT"

[[bin]]
name = "vuer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
ignore = "0.4"
oxc_parser = "0.136"
oxc_allocator = "0.136"
oxc_ast = "0.136"
oxc_ast_visit = "0.136"
oxc_span = "0.136"
oxc_syntax = "0.136"
oxc_diagnostics = "0.136"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2"

[dev-dependencies]
tempfile = "3.27"
rstest = "0.26"
