[package]
name = "vuer"
version = "0.1.0"
edition = "2024"
# MSRV: the highest minimum across our dependency tree is `oxc` 0.136
# which requires rustc 1.94.0. Bumping this when we update `oxc` is part
# of the dependency review for every release.
rust-version = "1.94"
description = "A high-performance Vue.js SFC scanner with clear, actionable diagnostics"
license = "MIT"

[[bin]]
name = "vuer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
ignore = "0.4"
oxc_parser = "0.136"
oxc_allocator = "0.136"
oxc_ast = "0.136"
oxc_ast_visit = "0.138"
oxc_span = "0.136"
oxc_syntax = "0.136"
oxc_diagnostics = "0.136"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
atty = "0.2"
regex = "1.10"
annotate-snippets = "0.12"
anstream = "0.6"
owo-colors = { version = "4", features = ["supports-colors"] }
rayon = "1.10"

[dev-dependencies]
tempfile = "3.27"
rstest = "0.26"
insta = { version = "1", features = ["filters"] }
assert_cmd = "2"
